--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "mongoose": "^6.5.5"
+    "mongoose": "^6.5.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
